# retell-ai-agent-builder

./: .gitignore  .mcp.json  README.md
.claude/agents/: fastapi-backend-developer.md  react-frontend-developer.md
api/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  mvp.md  pyproject.toml
api/app/: config.py  database.py  main.py  supabase.py
api/app/api/: deps.py
api/app/api/routes/: __init__.py  agent_configs.py  auth.py  calls.py  web_calls.py  webhooks.py
api/app/models/: __init__.py  agent_config.py  call.py  call_result.py
api/app/schemas/: __init__.py  agent.py  agent_config.py  agent_create.py  auth.py  call.py  call_result.py  web_call.py
api/app/services/: __init__.py  auth.py  call_analysis.py  post_processing.py  prompts.py  retell.py
api/migrations/: env.py
api/migrations/versions/: 82efae84f694_seed_admin_user.py  96c09015d01d_initial_schema.py
docs/plan/: agent-prompt-example.md  api-mvp.md  initial-task.md  phase-1-be.md  phase-1-fe.md  phase-1-supabase.md  plan.md
frontend/: .env.example  README.md  kubb.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: agent-config-form.tsx  agent-info-card.tsx  call-details-card.tsx  call-history.tsx  protected-route.tsx  transcript-card.tsx  trigger-call-form.tsx  web-call-button.tsx
frontend/src/hooks/: useRetellWebCall.ts
frontend/src/lib/: auth.tsx  query-client.ts  supabase.ts  utils.ts
frontend/src/lib/api/: index.ts
frontend/src/routes/: call-details.tsx  details.tsx  edit.tsx  index.tsx  login.tsx  new.tsx
(+116 files in other folders)
